force-app/main/default/objects/OpportunityLineItem/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <description>Exchange rate for USD conversion - captured for audit purposes during Quote-to-Opportunity sync process. Used to maintain consistent exchange rates across related revenue objects.</description>
    <inlineHelpText>Exchange rate used for USD conversion calculations. This field is populated automatically during Quote sync and should not be manually edited except by system administrators.</inlineHelpText>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>