force-app/main/default/objects/OpportunityLineItem/fields/Include_in_ARR__c.field-meta.xml
<CustomField>
    <fullName>Include_in_ARR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mark line items that count toward ARR (first year subscription items only)</description>
    <inlineHelpText>Mark line items that count toward ARR (first year subscription items only)</inlineHelpText>
    <label>Include in ARR Override</label>
    <type>Checkbox</type>
</CustomField>