force-app/main/default/objects/OpportunityLineItem/fields/Include_in_ARR_Sum__c.field-meta.xml
<CustomField>
    <fullName>Include_in_ARR_Sum__c</fullName>
    <label>Include in ARR Sum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>