force-app/main/default/objects/OpportunityLineItem/fields/Sync_to_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_Renewal__c</fullName>
    <description>Determines whether this opportunity line item should be synced to the related renewal opportunity during Change Order processing. Required field for Change Order opportunities.</description>
    <inlineHelpText>Select &quot;Yes&quot; if this product should continue to the renewal opportunity, &quot;No&quot; if it should not be included in future renewals.</inlineHelpText>
    <label>Sync to Renewal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>